porfavor no te borres

--- a/src/app/components/avatar-selector/avatar-selector.component.html
+++ b/src/app/components/avatar-selector/avatar-selector.component.html
@@ -1,6 +1,6 @@
 <ion-row>
-  <ion-col>
-      <h3>Seleccione Avatar</h3>
+  <ion-col text-center> 
+      <h3>Seleccione Su Nueva Foto</h3>
   </ion-col>
   </ion-row>
 
