--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,18 +1,13 @@
 
-
-
-
 <div class="post">
  <ion-item lines="none">
 
 
-
- 
-   <ion-label >
-     <h1 >  </h1> 
-     <h3 >simon</h3>
-     <h5>simonkinmaster@gmail.com</h5>
-   </ion-label>
+  <ion-label >
+    <h3 >{{post.nombreD}}</h3>
+     
+    <h5>{{post.precioD}}</h5>
+  </ion-label>
  </ion-item>
 
   
