--- a/src/app/pages/tab1/tab1.page.scss
+++ b/src/app/pages/tab1/tab1.page.scss
@@ -6,3 +6,24 @@
 .my-custom-menu {
   --width: 500px;
 }
+
+.principal{
+  
+  text-align:center;
+  color:green;
+
+
+}
+
+.secundario{
+  
+  text-align:center;
+  
+  color: green;
+
+
+}
+
+
+
+
