--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,9 +1,61 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
+<ion-header no-border>
+   <ion-toolbar>
+     <ion-title color="success">
+       Ingrese Deuda
+     </ion-title>
+   </ion-toolbar>
+</ion-header>
+  
+<ion-content padding>
+  
+<ion-list> 
+  <ion-item>
+      <ion-label position="floating">Nombre</ion-label>
+     <ion-textarea [(ngModel)]="dineroeg.nombreD"></ion-textarea>
+ </ion-item>
+
+ <ion-item>
+  <ion-label position="floating">Precio</ion-label>
+ <ion-textarea [(ngModel)]="dineroeg.precioD"></ion-textarea>
+</ion-item>
+
+<ion-buttons   slot="end">
+      <ion-button (click)="crearPost()"
+                  [disabled]="dineroeg.nombreD.length < 1"
+                  color="primary"
+                  >
+            Crear Ingreso
+      </ion-button> 
+  </ion-buttons>
+</ion-list>
+  
+</ion-content>
+
+
+<ion-toolbar>
+    <ion-title color="success">
+      ¿Algun tipo de ingreso?
     </ion-title>
   </ion-toolbar>
-</ion-header>
 
-<ion-content></ion-content>
+
+<ion-content padding>
+  
+    <ion-list> 
+     <ion-item>
+      <ion-label position="floating" >Precio</ion-label>
+     <ion-textarea [(ngModel)]="dineroing.cantidadI"></ion-textarea>
+    </ion-item>
+    
+      <ion-buttons  slot="end">
+          <ion-button (click)="crearPostIng()"
+          [disabled]="dineroing.cantidadI.length < 1"
+                      color="primary">
+                Crear Ingreso
+          </ion-button>
+      </ion-buttons>
+    </ion-list>
+      
+    </ion-content>
+      
+  
