--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,20 +1,32 @@
-<ion-tabs>
+<ion-tabs slide>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom"  >
+    
     <ion-tab-button tab="tab1">
       <ion-icon name="home"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-label>Home </ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="calendar"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-icon name="logo-usd"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="book"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+    <ion-tab-button tab="tab5">
+      <ion-icon name="logo-steam"></ion-icon>
     </ion-tab-button>
+    
+    <ion-tab-button tab="tab4">
+        <ion-icon name="stats"></ion-icon>
+      </ion-tab-button>
+
+      
+    <ion-tab-button tab="tab3">
+        <ion-icon name="contact"></ion-icon>
+      </ion-tab-button>
+
+      
+
+
   </ion-tab-bar>
 
 </ion-tabs>
