--- a/src/app/pages/tab1/tab1.page.scss
+++ b/src/app/pages/tab1/tab1.page.scss
@@ -7,10 +7,21 @@
   --width: 500px;
 }
 
+
+
+#titulo{
+  color:rgb(2, 0, 0);
+}
+
+#tituloxs{
+  font-size: 40px; 
+
+}
+
 .principal{
   
   text-align:center;
-  color:green;
+  color:rgb(0, 0, 0);
 
 
 }
@@ -19,7 +30,7 @@
   
   text-align:center;
   
-  color: green;
+  color: rgb(0, 0, 0);
 
 
 }
