--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -11,8 +11,13 @@
       <ion-icon name="logo-usd"></ion-icon>
     </ion-tab-button>
 
+    <ion-tab-button tab="tab6">
+      <ion-icon name="bookmarks"></ion-icon>
+    </ion-tab-button>
+
+
     <ion-tab-button tab="tab5">
-      <ion-icon name="logo-steam"></ion-icon>
+      <ion-icon name="calendar"></ion-icon>
     </ion-tab-button>
     
     <ion-tab-button tab="tab4">
@@ -23,6 +28,7 @@
     <ion-tab-button tab="tab3">
         <ion-icon name="contact"></ion-icon>
       </ion-tab-button>
+
 
       
 
