--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,15 +1,23 @@
 
 <div class="post">
- <ion-item lines="none">
+ <ion-item lines="none" >
 
 
-  <ion-label >
-    <h3 >{{post.nombreD}}</h3>
-     
-    <h5>{{post.precioD}}</h5>
+  <ion-label id="kappa">
+    <h1> $ {{post.precioD | FiltroPipe }}   </h1>
+    <h2> Texto: {{post.nombreD}}  </h2>
   </ion-label>
  </ion-item>
 
-  
-  
 </div>
+
+<ion-item lines="none">
+
+    <ion-label>
+      
+      <h3>{{ post.usuario.nombre }}</h3>
+      <h2> {{post.fechadepagD  | date:'mediumDate'}} </h2>
+    </ion-label>
+  </ion-item>
+
+ 
