--- a/src/app/pages/tab2/tab2.page.scss
+++ b/src/app/pages/tab2/tab2.page.scss
@@ -1,1 +1,13 @@
 
+.mainSlide, .mainSlide ion-slide {
+    width: 100%;
+    height: 100%;
+}
+
+#titulo{
+    color:rgb(2, 0, 0);
+}
+
+.class {
+    color:rgb(2, 0, 0);
+}
